<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/root">

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_scan"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_scanning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_connect"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollRecords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connect" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/clear_data"
        app:layout_constraintStart_toStartOf="@+id/et_filename"
        app:layout_constraintTop_toBottomOf="@+id/et_filename" />

    <EditText
        android:id="@+id/et_filename"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter the filename"
        android:inputType="text"
        android:maxLines="1"
        android:paddingTop="10sp"
        android:text="@string/txt_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollRecords"
        app:layout_constraintTop_toTopOf="@+id/scrollRecords"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scanning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_filename"
        app:layout_constraintStart_toStartOf="@+id/et_filename"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/save_data"
        app:layout_constraintBottom_toBottomOf="@+id/btn_clear"
        app:layout_constraintEnd_toEndOf="@+id/et_filename" />

    <ScrollView
        android:id="@+id/scrollRecords"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/recordings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_filename"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/record_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>