<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/connect"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_scan"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_scanning"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_connect"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/sensorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connect" />

    <LinearLayout
        android:id="@+id/sensorLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:id="@+id/scrollRecords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/recordings">

            <LinearLayout
                android:id="@+id/record_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="horizontal"
                android:orientation="vertical" />
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintSensor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_filename"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="Enter the filename"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="10sp"
                android:text="@string/txt_record"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="140sp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:text="@string/clear_data"
                app:layout_constraintBottom_toTopOf="@+id/btn_record"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="140sp"
                android:layout_height="48dp"
                android:text="@string/save_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_clear"
                app:layout_constraintTop_toTopOf="@+id/btn_clear" />

            <Button
                android:id="@+id/btn_record"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/start_record"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>